--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,6 @@ a {
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
-    align-items: center;
     letter-spacing: 0.03em;
     color: var(--logo-web-color);
     text-transform: uppercase
@@ -77,6 +76,12 @@ a {
     color: var(--paragraph-color);
 }
 
+.address-item:hover,
+.address-item:focus {
+    color: #404bbf;
+}
+
+
 .hero {
     background: var(--title-color);
 }
@@ -95,7 +100,6 @@ a {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    align-items: center;
     letter-spacing: 0.04em;
     color: #FFFFFF;
     background: #4D5AE5;
@@ -162,6 +166,10 @@ a {
     background-color: #FFFFFF
 }
 
+.team-item {
+    background-color: #FFFFFF;
+}
+
 .team-item-title {
     font-weight: 500;
     font-size: 20px;
@@ -188,7 +196,6 @@ a {
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
-    align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--logo-web-color);
@@ -216,7 +223,6 @@ a {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
-    align-items: center;
     text-align: center;
     letter-spacing: 0.04em;
     color: #4D5AE5;
